--- a/app/views/about/index.html.erb
+++ b/app/views/about/index.html.erb
@@ -4,19 +4,19 @@
 <div class="container">
   <div class="one_third">
     <section class="aboutoneleft">
-      <h2>我们目标</h2>
-      <p>希望用IT技术来改变公益事业。让更多的人了解公益。。。。。</p>
+      <h2>我们使命</h2>
+      <p>通过互联网推动公益发展与社会创新，为公益和社会创新提供互联网信息技术解决方案，让公益的“正能量”更加广泛和深刻地影响更多的人，推动公益习惯完全普及!</p>
       <img class="raster" src="/images/raster.png" alt=""/>
-      <p class="quote">Etiam eget mi enim, non ultricies nisi voluptatem, illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo nemo enim ipsam voluptatem.</p>
+      <p class="quote">让公益“正能量”全面普及!</p>
     </section>
   </div>
   <!-- end one-third column ends here -->
   <div class="one_third">
     <section class="aboutonecenter">
-      <h2>我们理念</h2>
-      <p>用我们能做的来帮助更多的人</p>
+      <h2>我们愿景</h2>
+      <p>通过互联网媒体来传播爱，让公益传播得更广泛，从而来深刻地影响更多的人，推动公益事业得发展，网络捐款更加透明，并实现更加完美的线上线下互动。</p>
       <img class="raster" src="/images/raster.png" alt=""/>
-      <p class="quote">的说法盛大Etiam eget mi enim, non ultricies nisi voluptatem, illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo nemo enim ipsam voluptatem.</p>
+      <p class="quote">以爱助爱，让更多得人感受温暖</p>
     </section>
   </div>
   <!-- end one-third column ends here -->
@@ -35,21 +35,23 @@
   <div class="sepContainer1"></div>
   <!-- Toggle -->
   <h2>Workers</h2>
-  <div class="toggle-trigger">Production</div>
+  <div class="toggle-trigger">团队顾问</div>
   <div class="toggle-container">
-    <p>Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Vestibulum tortor quam, feugiat vitae, ultricies eget, tempor sit amet, ante. Donec eu libero sit amet quam egestas semper. Aenean ultricies mi vitae est. Mauris placerat eleifend leo. Quisque sit amet est et sapien ullamcorper pharetra. Vestibulum erat wisi, condimentum sed, commodo vitae, ornare sit amet, wisi. Aenean fermentum, elit eget tincidunt condimentum, eros ipsum rutrum orci, sagittis tempus lacus enim ac dui. Donec non enim in turpis pulvinar facilisis. Ut felis. Praesent dapibus, neque id cursus faucibus, tortor neque egestas augue, eu vulputate magna eros eu erat. </p>
+    <p>王老吉,中国地质大学（北京）产业资源经济学博士，湖南大学技术创新学博士生，微益中国联合创始人，2005-2007芙蓉学子大型公益执行委员会主任，微益导航、公益百科联合创始人，CNTV最美乡村教师顾问、CNTV网络春晚顾问、顺风车大型公益活动顾问，微益捐物、小小任务、微益微卡等社会企业公益产品的顾问。</p>
   </div>
-  <div class="toggle-trigger">Design</div>
+  <div class="toggle-trigger">CTO</div>
   <div class="toggle-container">
-    <p>Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Vestibulum tortor quam, feugiat vitae, ultricies eget, tempor sit amet, ante. Donec eu libero sit amet quam egestas semper. Aenean ultricies mi vitae est. Mauris placerat eleifend leo. Quisque sit amet est et sapien ullamcorper pharetra. Vestibulum erat wisi, condimentum sed, commodo vitae, ornare sit amet, wisi. Aenean fermentum, elit eget tincidunt condimentum, eros ipsum rutrum orci, sagittis tempus lacus enim ac dui. Donec non enim in turpis pulvinar facilisis. Ut felis. Praesent dapibus, neque id cursus faucibus, tortor neque egestas augue, eu vulputate magna eros eu erat. </p>
+    <p>Seamon,军事院校信息技术专业毕业。16年专业IT和互联网开发管理经验，负责互联网项目战略策划和技术架构。曾在军队核心信息技术部门、ISP、医药、金融、财经等多个行业从事互联网项目开发管理。曾服务于中国最大的职业社交网站，负责网站架构和总体技术，为1300万网站用户提供优秀的职业社交服务。 </p>
   </div>
-  <div class="toggle-trigger">Front-End Engineer</div>
+  <div class="toggle-trigger">策划</div>
   <div class="toggle-container">
-    <p>Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Vestibulum tortor quam, feugiat vitae, ultricies eget, tempor sit amet, ante. Donec eu libero sit amet quam egestas semper. Aenean ultricies mi vitae est. Mauris placerat eleifend leo. Quisque sit amet est et sapien ullamcorper pharetra. Vestibulum erat wisi, condimentum sed, commodo vitae, ornare sit amet, wisi. Aenean fermentum, elit eget tincidunt condimentum, eros ipsum rutrum orci, sagittis tempus lacus enim ac dui. Donec non enim in turpis pulvinar facilisis. Ut felis. Praesent dapibus, neque id cursus faucibus, tortor neque egestas augue, eu vulputate magna eros eu erat. </p>
+    <p>霞飞，湖南大学工商管理学院企业管理专业 硕士 ；参与微益导航的策划、开发、材料撰写等相；事宜；微益中国志愿者，热爱公益事业；撰写过有关烟草、APP等内容的方案；曾参；与广西中烟、中航起、湖南省第四工程有限公司咨询项目。 </p>
   </div>
-  <div class="toggle-trigger">Engineer</div>
+  <div class="toggle-trigger">其他</div>
   <div class="toggle-container">
-    <p>Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Vestibulum tortor quam, feugiat vitae, ultricies eget, tempor sit amet, ante. Donec eu libero sit amet quam egestas semper. Aenean ultricies mi vitae est. Mauris placerat eleifend leo. Quisque sit amet est et sapien ullamcorper pharetra. Vestibulum erat wisi, condimentum sed, commodo vitae, ornare sit amet, wisi. Aenean fermentum, elit eget tincidunt condimentum, eros ipsum rutrum orci, sagittis tempus lacus enim ac dui. Donec non enim in turpis pulvinar facilisis. Ut felis. Praesent dapibus, neque id cursus faucibus, tortor neque egestas augue, eu vulputate magna eros eu erat. </p>
+    <p> Crayl,10年软件和互联网研发和管理经验，系统集成项目经理 。曾任北京中经华强咨询有限公司技术总监、CTO。北京华纳康科技有限公司技术总监。青岛软控股份有限公司技术经理。曾设计开发微益中国、CNTV乡村教师网、品牌CBD、创业英雄、顺风车、微影中国、驰骋音乐网、医药专家网等网站
+      <br/>婷婷：从事网络推广；微益导航推广总监；公益百科内容策略师；公益百科推广、策划
+ </p>
   </div>
   <!-- ENDS Toggle --> 
 </div>
