--- a/app/assets/stylesheets/admin/admin.css
+++ b/app/assets/stylesheets/admin/admin.css
@@ -9,5 +9,7 @@
  * compiled file, but it's generally better to create a new file per style scope.
  *
  *= require_self
+ *= require admin/bootstrap_and_overrides
+ *= require admin/jquery.fileupload-ui
  *= require_tree .
  */
