--- a/app/assets/stylesheets/admin/admin.css
+++ b/app/assets/stylesheets/admin/admin.css
@@ -10,6 +10,6 @@
  *
  *= require_self
  *= require admin/bootstrap_and_overrides
- *= require admin/jquery.fileupload-ui
+ *= require admin/skin/layer
  *= require_tree .
  */
