--- a/app/views/layouts/backoffice.html.erb
+++ b/app/views/layouts/backoffice.html.erb
@@ -33,7 +33,7 @@
     <!-- For all other devices -->
     <!-- Size should be 32 x 32 pixels -->
     <%= favicon_link_tag 'favicon.ico', :rel => 'shortcut icon' %>
-    <%= javascript_include_tag "admin" %>
+    <%= javascript_include_tag "admin/admin" %>
   </head>
   <body data-target=".bs-docs-sidebar" data-spy="scroll">
 
