--- a/app/views/cases/index.html.erb
+++ b/app/views/cases/index.html.erb
@@ -13,7 +13,7 @@
     </div>
   </div>
   <div class="one_third lastcolumn">
-    <h2><%=c.title%></h2>
+    <h2><%=c.name%></h2>
     <div class="case_content"><%=c.content%></div>
     <p class="portfolio"><a href="<%=c.url%>">Visit Website</a></p>
   </div>
