--- a/app/views/cases/index.html.erb
+++ b/app/views/cases/index.html.erb
@@ -14,7 +14,7 @@
   </div>
   <div class="one_third lastcolumn">
     <h2><%=c.name%></h2>
-    <div class="case_content"><%=c.content%></div>
+    <div class="case_content"><%=c.info%></div>
     <p class="portfolio"><a href="<%=c.url%>">Visit Website</a></p>
   </div>
   <%end%>
