--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -12,6 +12,7 @@
 
 <meta charset="utf-8">
 <meta name="author" content="">
+<meta property="wb:webmaster" content="bfe3e621e00d0aa3" />
 <%=display_meta_tags(set_meta_tags)%>
 <%= csrf_meta_tags %>
 <!--[if lt IE 9]>
