--- a/app/views/blogs/_blog_right_login.html.erb
+++ b/app/views/blogs/_blog_right_login.html.erb
@@ -5,8 +5,7 @@
       <ul class="blogList blogLogin">
     
         <li><a class="about" href="/users/auth/weibo" title="" ><span style="padding-left:30px;background: url(/images/auth/tsina.png) left no-repeat;padding-top:5px">新浪微博登陆</span></a></li>
-       <li><a class="about" href="/users/auth/qq_connect" title="" ><span style="padding-left:30px;background: url(/images/auth/tqq.png) left no-repeat;padding-top:5px">QQ帐户登陆</span></a></li>
-       <li><a class="about" href="/users/auth/tqq" title="" ><span style="padding-left:30px;background: url(/images/auth/tsina.png) left no-repeat;padding-top:5px">腾讯微博登陆</span></a></li>
+       <li><a class="about" href="/users/auth/tqq" title="" ><span style="padding-left:30px;background: url(/images/auth/tqq.png) left no-repeat;padding-top:5px">QQ帐户登陆</span></a></li>
        <li><a class="about" href="/users/auth/renren" title="" ><span style="padding-left:30px;background: url(/images/auth/renren.png) left no-repeat;padding-top:5px">人人帐户登陆</span></a></li>
       </ul>
     </section>
