--- a/app/views/blogs/index.html.erb
+++ b/app/views/blogs/index.html.erb
@@ -42,6 +42,6 @@
 
   </div>
   <!-- ten columns ends here --> 
-  <%#=render "blog_right_login"%>
+  <%=render "blog_right_login"%>
   <%#=render "blog_right"%>
 </div>
