--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -138,7 +138,7 @@
   <a class="jiathis_button_renren"></a>
   <a class="jiathis_button_douban"></a>
   <a class="jiathis_button_twitter"></a>
-  
+  user:<%=current_user.try(:name)%>
 
 </div>
 <script type="text/javascript">
