--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -124,7 +124,7 @@
 <div id="copyright">
   <div class="container">
     <div class="eleven columns alpha">
-      <p class="copyright">&copy; Copyright 2013. &quot;NGO Backup&quot; by oreatial。 All rights reserved.</p>
+      <p class="copyright">&copy; Copyright 2013. &quot;NGO Backup&quot; by oreatial,All rights reserved.ICP备案号:13016875</p>
     </div>
     <div class="five columns omega">
       <section class="socials">
@@ -138,7 +138,6 @@
   <a class="jiathis_button_renren"></a>
   <a class="jiathis_button_douban"></a>
   <a class="jiathis_button_twitter"></a>
-  user:<%=current_user.try(:name)%>
 
 </div>
 <script type="text/javascript">
