--- a/app/views/blogs/_blog_right.html.erb
+++ b/app/views/blogs/_blog_right.html.erb
@@ -2,8 +2,8 @@
 ================================================== -->
   <div class="one_third lastcolumn sidebar">
     <section class="first">
-      <h3>Blog Navigation</h3>
-      <div class="boxtwosep"></div>
+      <h3>TODO</h3>
+      <!--<div class="boxtwosep"></div>
       <ul class="blogList">
         <li><a class="about" href="blog.html" title="">Blog - Style One</a></li>
         <li class="activenavigationItem">Blog - Active Item</li>
@@ -24,6 +24,7 @@
       <div class="boxtwosep"></div>
       <h5><span class="color">40%</span> Sale &rsaquo;&rsaquo; Love Fashion</h5>
       <p>There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form.</p>
+    -->
     </section>
   </div>
   <!-- six columns ends here --> 
