--- a/app/views/blogs/show.html.erb
+++ b/app/views/blogs/show.html.erb
@@ -5,21 +5,13 @@
   <!-- Blog Post ==================================================
 ================================================== -->
   <div class="two_third">
-    <section class="postone">
-      <h2>News from Photography World</h2>
-      <p class="meta"> <span class="left">Date: <strong>14 MAY</strong></span> <span class="left">posted by <strong>Anariel</strong></span><span class="left tags">on <a href="#" rel="tag">photography</a>, <a href="#" rel="tag">Artistic</a>, <a href="#" rel="tag">Beauty and Art</a></span> <span class="left comment"> <a href="#" title="">46 Comments</a></span> </p>
-      <a href="images/portfolio/bigsize.jpg" class="prettyPhoto[gal]"><img src="images/portfolio/2.jpg" alt=""/></a>
-      <p>Lorem ipsum dolor sit amet, proscriptum videt ulteriori. Filiam sunt amore nec est cum autem est se in. Cellam sanctissima coniunx in lucem exempli paupers coniunx rex cum autem quod ait regem Ardalio. Filiam sunt amore nec est cum autem est se in.Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Vestibulum tortor quam,feugiat vitae, ultricies eget, tempor sit amet, ante.</p>
-      <h4>Lorem ipsum dolor sit amet, verenam operibus furiam conclusoque sponte profundo. Conservus mihi esse haec aliquam inlido laetare quod eam ad per. Antiochia videns quia quod non ait est Apollonius non dum animae tertio eam ad te princeps ea docentur Hellenicus ut diem finito convocatis secessit civitatis civium takimata.</h4>
-      <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut quis nibh odio. Morbi ipsum turpis, rutrum et dapibus eget, cursus imperdiet orci. Nam nisl nunc, aliquet et porta at, adipiscing vitae sapien. Fusce congue facilisis pulvinar. In vitae lacus ac neque scelerisque vehicula. Quisque sodales, lectus non dignissim egestas, est nulla pretium eros, sed tincidunt massa velit eget lectus. Sed lectus enim, suscipit ut ultrices non, adipiscing quis odio. Cras sodales molestie tellus sit amet convallis. Mauris sed leo orci. Nullam facilisis auctor fringilla. Quisque eget est enim, blandit vestibulum magna. Suspendisse nec leo felis.</p>
-      <h4 class="tags">Tags: <a href="#">Seo</a> &loz; <a href="#">Print</a> &loz; <a href="#">Design</a></h4>
-    </section>
+    <%=render @blog,object: @flag%> 
     <!-- Blog Comments ==================================================
 ================================================== -->
-    <section class="comments">
+  <!--  <section class="comments">
       <div class="blankSeparator"></div>
       <div class="sepContainer2"></div>
-      <h2>Comments</h2>
+      <h2>评论</h2>
       <div class="sepContainer2"></div>
       <div class="blankSeparator"></div>
       <div class="boxtwosep"></div>
@@ -29,59 +21,55 @@
             <div class="commentMeta">
               <p>April 23nd</p>
               <img class="user" src="images/blog/1.png" alt="Default user icon" /> </div>
-            <!-- end commentMeta -->
+            <!-- end commentMeta --
             <div class="commentBody">
               <h3><a href="#">John Smith</a></h3>
               <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur consequat lectus risus. Donec scelerisqu turpis non ligula convallis viverra pharetra metus volutpat. Mauris eu mattis metus. Nullam et faucibus dui. In hac habitasse platea dictumst. Praesent ut massa arcu, eget fermentum leo. </p>
               <a href="#" class="buttonhome fl">more <span>+</span></a> </div>
-            <!-- end commentBody --> 
+            <!-- end commentBody --
           </li>
           <li>
             <div class="commentMeta">
               <p>April 23nd</p>
               <img class="user" src="images/blog/2.png" alt="Default user icon" /> <span class="adminIcon">ADMIN</span> </div>
-            <!-- end commentMeta -->
+            <!-- end commentMeta --
             <div class="commentBody adminReply">
               <h3><a href="#">Admin</a></h3>
               <p>Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Vestibulum tortor    quam,feugiat vitae, ultricies eget, tempor sit amet, ante. Donec eu libero sit amet quam egestas semper. Aenean ultricies mi vitae est. Mauris placerat eleifend leo.</p>
               <a href="#" class="buttonhome fl">more <span>+</span></a> </div>
-            <!-- end commentBody -->
+            <!-- end commentBody --
             <ul>
             </ul>
           </li>
         </ul>
       </div>
-      <!-- end Comments --> 
+      <!-- end Comments --
     </section>
+  -->
     <!-- Blog Contact ==== -->
     <div id="contactForm">
-      <h2>Leave a comment</h2>
+      <h2>评论</h2>
+      <%if current_user%>
       <form action="/contacts" method="post" id="contact_form">
         <input type="hidden" name="contact[item_id]" value="<%=params[:id]%>"/>
         <input type="hidden" name="contact[item_type]" value="Blog"/>
-        <div class="name">
-          <label for="name">Your Name:</label>
-          <p> Please enter your full name</p>
-          <input id=name name="contact[name]" type=text placeholder="e.g. Mr. John Smith" required />
-        </div>
-        <div class="email">
-          <label for="email">Your Email:</label>
-          <p> Please enter your email address</p>
-          <input id=email name="contact[email]" type=email placeholder="example@domain.com" required />
-
-        </div>
         <div class="message">
+          
           <label for="message">Your Message:</label>
           <p> Please enter your question</p>
           <textarea id=message name="contact[content]" rows=6 cols=10 required></textarea>
+          
         </div>
         <div id="loader"> <input type="submit" value="Submit" /></div>
       </form>
+      <%else%>
+          <input type="button" class="layer" value="请先登陆"/>
+      <%end%>
     </div>
 
   </div>
 
-  <!-- Blog Sidebar ================================================= -->
+  <!-- Blog Sidebar ================================================= --
   <div class="one_third lastcolumn sidebar">
     <section class="first">
       <h3>Blog Navigation</h3>
@@ -113,3 +101,15 @@
 <!-- container ends here -->
 
 <div class="blankSeparator2"></div>
+<script>
+$('.layer').click(function(){
+ $.layer({
+    type : 2,
+    title : '天之痕三个人的时光-半抱琵琶版',
+    iframe : {src : 'http://www.tudou.com/v/Rvy0IbYmBrQ/&resourceId=0_04_05_99/v.swf'},
+    area : ['750px' , '466px'],
+    offset : ['100px','']
+});
+})
+
+</script>
