--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -53,7 +53,7 @@
     <!-- Header | Logo, Menu
     ================================================== -->
     <header>
-      <div class="logo"><a href="index.html"><img src="/images/logo.png" alt="" /></a></div>
+      <div class="logo"><a href="/"><img src="/images/logo.png" alt="" /></a></div>
       <div class="mainmenu">
         <div id="mainmenu">
           <ul class="sf-menu">
@@ -65,7 +65,7 @@
                 <li><a href="gallery.html">Portfolio Gallery</a></li>
               </ul>-->
             </li>
-            <li><a href="/blogs" id=<%="visited" if controller_name=="blog"%>><span class="home"><img src="/images/blog.png" alt="" /></span>博客</a>
+            <li><a href="/blogs" id=<%="visited" if controller_name=="blogs"%>><span class="home"><img src="/images/blog.png" alt="" /></span>博客</a>
              <!-- <ul>
                 <li><a href="singleblog.html">Single Post</a></li>
               </ul>-->
