--- a/app/views/about/index.html.erb
+++ b/app/views/about/index.html.erb
@@ -41,16 +41,20 @@
   </div>
   <div class="toggle-trigger">CTO</div>
   <div class="toggle-container">
-    <p>Seamon,军事院校信息技术专业毕业。16年专业IT和互联网开发管理经验，负责互联网项目战略策划和技术架构。曾在军队核心信息技术部门、ISP、医药、金融、财经等多个行业从事互联网项目开发管理。曾服务于中国最大的职业社交网站，负责网站架构和总体技术，为1300万网站用户提供优秀的职业社交服务。 </p>
+    <p>Seamon,军事院校信息技术专业毕业。16年专业IT和互联网开发管理经验，负责互联网项目战略策划和技术架构。曾在军队核心信息技术部门、ISP、医药、金融、财经等多个行业从事互联网项目开发管理。曾服务于中国最大的职业社交网站，负责网站架构和总体技术，为1300万网站用户提供优秀的职业社交服务。 <br/>
+    Crayl,10年软件和互联网研发和管理经验，系统集成项目经理 。曾任北京中经华强咨询有限公司技术总监、CTO。北京华纳康科技有限公司技术总监。青岛软控股份有限公司技术经理。曾设计开发微益中国、CNTV乡村教师网、品牌CBD、创业英雄、顺风车、微影中国、驰骋音乐网、医药专家网等网站
+  </p>
   </div>
   <div class="toggle-trigger">策划</div>
   <div class="toggle-container">
-    <p>霞飞，湖南大学工商管理学院企业管理专业 硕士 ；参与微益导航的策划、开发、材料撰写等相；事宜；微益中国志愿者，热爱公益事业；撰写过有关烟草、APP等内容的方案；曾参；与广西中烟、中航起、湖南省第四工程有限公司咨询项目。 </p>
+    <p>盾盾,2010年，毕业于湖南大学工商管理学院企业管理专业 博士 曾任海信科龙电器股份有限公司产品管理部市场分析经理,北京中经华强咨询有限公司首席咨询师,北京高端新锐咨询有限公司首席咨询师,
+陕西中烟营销中心顾问,深圳瑞品源营销公司顾问 .主要服务品牌包括：海信、容声、芙蓉王、白沙、好猫、真龙、黄山、贵烟 酒鬼、银华棉麻
+ </p>
   </div>
   <div class="toggle-trigger">其他</div>
   <div class="toggle-container">
-    <p> Crayl,10年软件和互联网研发和管理经验，系统集成项目经理 。曾任北京中经华强咨询有限公司技术总监、CTO。北京华纳康科技有限公司技术总监。青岛软控股份有限公司技术经理。曾设计开发微益中国、CNTV乡村教师网、品牌CBD、创业英雄、顺风车、微影中国、驰骋音乐网、医药专家网等网站
-      <br/>婷婷：从事网络推广；微益导航推广总监；公益百科内容策略师；公益百科推广、策划
+    <p> 琛琛,厦门大学广告学专业毕业7年专业广告工作经验，负责蓝火核心客户策略制订和策略撰写，
+曾服务过的客户包括华帝、创维电视、TSD手机、山水黔城、锦绣香江、家谱酒、奥康皮鞋、奥康皮具、美丽佳人、芙蓉王等。
  </p>
   </div>
   <!-- ENDS Toggle --> 
