--- a/app/views/contacts/index.html.erb
+++ b/app/views/contacts/index.html.erb
@@ -4,7 +4,7 @@
   <!-- google map -->
   <div class="map-holder">
     <div class="map-container">
-      <iframe class="map" src="http://maps.google.com/maps?f=q&amp;q=北京朝阳区&amp;hnear=北京朝阳区建国路甲92号世茂大厦&amp;source=s_q&amp;hl=zh-cn&amp;geocode=&amp;q=Beijing,+china&amp;aq=0&amp;oq=M%C3%BCnchen&amp;ie=UTF8&amp;hq=&amp;t=m&amp;spn=0.347588,2.635345&amp;z=10&amp;iwloc=A&amp;output=embed"></iframe>
+      <iframe class="map" src="https://maps.google.com.tw/maps?f=q&hl=zh-cn&geocode=&q=%E5%8C%97%E4%BA%AC%E6%9C%9D%E9%98%B3%E5%8C%BA%E5%BB%BA%E5%9B%BD%E8%B7%AF%E7%94%B292%E5%8F%B7%E4%B8%96%E8%8C%82%E5%A4%A7%E5%8E%A6&z=15&output=embed&om=1&sll=39.9092641,116.4707506&t="></iframe>
       <!-- end google map --> 
     </div>
     <!--map-container ends here--> 
