--- a/app/views/blogs/rich_text.html.erb
+++ b/app/views/blogs/rich_text.html.erb
@@ -9,7 +9,7 @@
       
        </textarea>
 
-       <input type="text" value="1" name="status"/>
+       <input type="hidden" value="1" name="status"/>
      </form>
 </div>
 <%=javascript_include_tag "zh_cn"%>
